PIM-8154 : Fix Validation rule dropdown overlapsed with the sticky footer.

--- a/src/Akeneo/Platform/Bundle/UIBundle/Resources/public/less/components/Subsection.less
+++ b/src/Akeneo/Platform/Bundle/UIBundle/Resources/public/less/components/Subsection.less
@@ -51,6 +51,7 @@
       position: sticky;
       bottom: 0;
       padding: 10px;
+      z-index: -1;
     }
   }
 
